--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,20 @@
             <version>2.2.2</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.apple</groupId>
+            <artifactId>AppleJavaExtensions</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.8.10.1</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
